created all minimal models and resources
