# library/openapi.yaml
@@ -184,7 +184,7 @@ paths:
         403:
           description: Validation error
 
-  /api/user/{user_id}/orders/:
+  /api/user/{user_id}/order:
     get:
       tags:
         - Order
@@ -222,7 +222,7 @@ paths:
             $ref: '#/definitions/resource_id'
         403:
           description: Validation error
-  /api/user/{user_id}/orders/{order_id}:
+  /api/user/{user_id}/order/{order_id}:
     get:
       tags:
         - Order
@@ -326,7 +326,7 @@ definitions:
       - year_published
       - amount
   book_with_id:
-    allOf:     # Combines the BasicErrorModel and the inline model
+    allOf:     # Combines the BasicErrorModel and the inline database
       - $ref: '#/definitions/book'
       - type: object
         properties:
